syntax = "proto3";

package grpc;

service ChatService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse) {}
}

message SendMessageRequest {
  string sender = 1;
  string recipient = 2;
  string content = 3;
}

message SendMessageResponse {
  string message_id = 1;
}

message GetMessagesRequest {
  string recipient = 1;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message Message {
  string id = 1;
  string sender = 2;
  string recipient = 3;
  string content = 4;
}
